# Process-Memory-Tools-v1.0.0

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  build_direct.bat  build_mingw.bat  build_msvc.bat
docs/: USAGE.md
examples/: config_example.txt
include/: process_utils.h
src/: process_modifier.cpp  process_utils.cpp  window_controller.cpp
